--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
+<script src="adSense.js"></script>
 <?xml version="1.0" encoding="UTF-8"?>
 <Error><Code>NoSuchKey</Code><Message>The specified key does not exist.</Message><Resource>/165086/d9lz0x6h5hmrcronvr92awsrkz423r5q</Resource><RequestId>aabc13f9228ce0da</RequestId></Error>
